// proto/chat.proto
syntax = "proto3";

package proto;

service ChatService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message ChatMessage {
  string username = 1;
  string message = 2;
}
